k8s/alarms.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: probler
  labels:
    name: probler

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: probler
  name: probler-alarms
  labels:
    app: probler-alarms
spec:
  serviceName: probler-alarms
  replicas: 1
  selector:
    matchLabels:
      app: probler-alarms
  template:
    metadata:
      labels:
        app: probler-alarms
    spec:
      containers:
        - name: probler-alarms
          image: saichler/probler-alarms:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: hdata
              mountPath: /data
      volumes:
        - name: hdata
          hostPath:
            path: /data
            type: DirectoryOrCreate
