k8s/gpu.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: probler
  labels:
    name: probler

---

apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: probler
  name: probler-gpu
  labels:
    app: probler-gpu
spec:
  #serviceName: probler-box
  #replicas: 3
  selector:
    matchLabels:
      app: probler-gpu
  template:
    metadata:
      labels:
        app: probler-gpu
    spec:
      containers:
        - name: probler-gpu
          image: saichler/probler-inv-gpu:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: hdata
              mountPath: /data
      volumes:
        - name: hdata
          hostPath:
            path: /data
            type: DirectoryOrCreate
