k8s/log-agent.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: probler
  labels:
    name: probler

---

apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: probler
  name: probler-log-agent
  labels:
    app: probler-log-agent
spec:
  selector:
    matchLabels:
      app: probler-log-agent
  template:
    metadata:
      labels:
        app: probler-log-agent
    spec:
      containers:
        - name: probler-log-agent
          image: saichler/probler-logagent:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: hdata
              mountPath: /data
      volumes:
        - name: hdata
          hostPath:
            path: /data
            type: DirectoryOrCreate
