k8s/maint.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: probler
  labels:
    name: probler

---

apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: probler
  name: probler-maint
  labels:
    app: probler-maint
spec:
  selector:
    matchLabels:
      app: probler-maint
  template:
    metadata:
      labels:
        app: probler-maint
    spec:
      hostNetwork: true
      containers:
        - name: probler-maint
          image: saichler/probler-maint:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: hdata
              mountPath: /data
      volumes:
        - name: hdata
          hostPath:
            path: /data
            type: DirectoryOrCreate
