k8s/topo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: probler
  labels:
    name: probler

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: probler
  name: probler-topo
  labels:
    app: probler-topo
spec:
  serviceName: probler-topo
  replicas: 1
  selector:
    matchLabels:
      app: probler-topo
  template:
    metadata:
      labels:
        app: probler-topo
    spec:
      containers:
        - name: probler-topo
          image: saichler/probler-topo:latest
          imagePullPolicy: Always
